# midnightstar

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.streamlit/: config.toml
docs/: facebook-post.md  graph-transformer-tutorial.md  linkedin-article.md  modal-training-facebook-ru.md  modal-training-facebook.md  modal-training-post.md
docs/superpowers/plans/: 2026-03-15-midnightstar-impl.md
docs/superpowers/specs/: 2026-03-14-midnightstar-design.md
pages/: 0_Download.py  1_Search.py  2_Explorer.py  3_Model_Training.py  4_Results.py  5_Data_GWAS.py  6_Data_GTEx.py  7_Data_HPA.py  8_Data_STRING.py  9_Structure_Viewer.py  home.py
src/data/: alphafold_client.py  bulk_datasets.py  bulk_downloader.py  cache.py  gene_resolver.py  gtex_client.py  gwas_client.py  hpa_client.py  models.py  string_client.py
src/models/: gnn.py  graph_transformer.py  modal_app.py  remote_trainer.py  trainer.py  vae.py
src/utils/: graph_builder.py  graph_features.py  session.py  text_explainer.py
tests/data/: test_bulk_downloader.py  test_cache.py  test_gene_resolver.py  test_gtex_client.py  test_gwas_client.py  test_hpa_client.py  test_models.py  test_string_client.py
tests/models/: test_gnn.py  test_graph_transformer.py  test_trainer.py  test_transformer_mps.py  test_vae.py
tests/utils/: test_graph_builder.py  test_text_explainer.py
